<resources>
    <string name="app_name">CollatzCheckIn</string>
    <string name="home">Home</string>
    <string name="qrscanner">QRScanner</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_profile">Create Profile</string>
    <string name="log_in_as_admin">Log in as Admin</string>
</resources>