<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:drawablePadding="8dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username_text"
                    android:drawablePadding="8dp"
                    android:text=""
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/email"
                    android:drawablePadding="8dp"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/email_text"
                    android:drawablePadding="8dp"
                    android:text=""
                    android:textSize="20sp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/updateButton"
                    android:text="@string/update_profile"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    app:cornerRadius = "20dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/cancelButton"
                    android:text="@string/cancel"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    app:cornerRadius = "20dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>